--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -115,8 +115,8 @@
     </div>
 
     <div class="acoes">
-      <div (click)="criarPensamento()" class="botao">Cancelar</div>
-      <div (click)="cancelar()" class="botao">Salvar</div>
+      <div routerLink="/listarPensamento" class="botao">Cancelar</div>
+      <div (click)="criarPensamento()" class="botao">Salvar</div>
     </div>
   </form>
 </section>
