creating http requests

--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -115,7 +115,7 @@
     </div>
 
     <div class="acoes">
-      <div routerLink="/listarPensamento" class="botao">Cancelar</div>
+      <div (click)="cancelar()" class="botao">Cancelar</div>
       <div (click)="criarPensamento()" class="botao">Salvar</div>
     </div>
   </form>
