--- a/src/app/componentes/pensamentos/excluir-pensamento/excluir-pensamento.component.css
+++ b/src/app/componentes/pensamentos/excluir-pensamento/excluir-pensamento.component.css
@@ -44,6 +44,7 @@
   cursor: pointer;
   margin-right: 10px;
   margin-top: 10px;
+  background-color: darkgrey;
 }
 
 .botao-excluir {
@@ -51,6 +52,7 @@
   cursor: pointer;
   margin-left: 5px;
   margin-top: 10px;
+  background-color: crimson;
 }
 
 .excluir-pensamentos {
