--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -3,38 +3,34 @@
     <h2>Adicione um <br />pensamento novo:</h2>
   </header>
 
-  <form action="">
+  <form [formGroup]="formulario">
     <label for="pensamento">Pensamento</label>
-    <input
-      type="textarea"
-      class="input"
-      id="pensamento"
-      name="pensamento"
-      placeholder="Digite o pensamento"
-      [(ngModel)]="pensamento.conteudo"
-    />
+    <input type="textarea" class="input" id="pensamento" formControlName="conteudo" placeholder="Digite o pensamento" />
+
+    <div class="mensagem__erro"
+    *ngIf="formulario.get('conteudo')?.errors && formulario.get('conteudo')?.touched">
+      Pensamento é obrigatório!
+    </div>
 
     <label for="autoria">Autoria ou fonte</label>
-    <input
-      type="text"
-      class="input"
-      id="autoria"
-      name="autoria"
-      placeholder="Digite a autoria ou fonte"
-      [(ngModel)]="pensamento.autoria"
-    />
+    <input type="text" class="input" id="autoria" formControlName="autoria" placeholder="Digite a autoria ou fonte" />
+
+    <div class="mensagem__erro"
+      *ngIf="formulario.get('autoria')?.errors?.['required'] && formulario.get('autoria')?.touched">
+      Autoria é obrigatória!
+    </div>
+
+    <div class="mensagem__erro"
+      *ngIf="formulario.get('autoria')?.errors?.['minlength'] && formulario.get('autoria')?.touched">
+      Autoria precisa ter no mínimo 3 caracteres!
+    </div>
+
 
     <label for="modelo">Selecione o modelo do card:</label>
     <div class="container-radio">
       <div class="radio-modelo">
         <label for="modelo1">
-          <input
-            type="radio"
-            id="modelo1"
-            value="modelo1"
-            name="modelo-card"
-            [(ngModel)]="pensamento.modelo"
-          />
+          <input type="radio" id="modelo1" value="modelo1" formControlName="modelo" />
 
           <div class="custom-radio">
             <span></span>
@@ -46,22 +42,16 @@
         Prévia:
         <div class="modelo modelo1 ff-roboto-mono">
           <img src="../../../../assets/imagens/modelo1.png" alt="aspas azuis" />
-          <p class="conteudo">{{ pensamento.conteudo }}</p>
+          <p class="conteudo">{{ formulario.get("conteudo")?.value }}</p>
           <p class="autoria">
-            <b> {{ pensamento.autoria }} </b>
+            <b> {{ formulario.get("autoria")?.value }} </b>
           </p>
         </div>
       </div>
 
       <div class="radio-modelo">
         <label for="modelo2">
-          <input
-            type="radio"
-            id="modelo2"
-            value="modelo2"
-            name="modelo-card"
-            [(ngModel)]="pensamento.modelo"
-          />
+          <input type="radio" id="modelo2" value="modelo2" formControlName="modelo" />
 
           <div class="custom-radio">
             <span></span>
@@ -72,26 +62,17 @@
 
         Prévia:
         <div class="modelo modelo2 ff-roboto-mono">
-          <img
-            src="../../../../assets/imagens/modelo2.png"
-            alt="aspas azul claro"
-          />
-          <p class="conteudo">{{ pensamento.conteudo }}</p>
+          <img src="../../../../assets/imagens/modelo2.png" alt="aspas azul claro" />
+          <p class="conteudo">{{ formulario.get("conteudo")?.value }}</p>
           <p class="autoria">
-            <b> {{ pensamento.autoria }}</b>
+            <b> {{ formulario.get("autoria")?.value }} </b>
           </p>
         </div>
       </div>
 
       <div class="radio-modelo">
         <label for="modelo3">
-          <input
-            type="radio"
-            id="modelo3"
-            value="modelo3"
-            name="modelo-card"
-            [(ngModel)]="pensamento.modelo"
-          />
+          <input type="radio" id="modelo3" value="modelo3" formControlName="modelo" />
 
           <div class="custom-radio">
             <span></span>
@@ -102,13 +83,10 @@
 
         Prévia:
         <div class="modelo modelo3 ff-roboto-mono">
-          <img
-            src="../../../../assets/imagens/modelo3.png"
-            alt="aspas verdes"
-          />
-          <p class="conteudo">{{ pensamento.conteudo }}</p>
+          <img src="../../../../assets/imagens/modelo3.png" alt="aspas verdes" />
+          <p class="conteudo">{{ formulario.get("conteudo")?.value }}</p>
           <p class="autoria">
-            <b> {{ pensamento.autoria }}</b>
+            <b> {{ formulario.get("autoria")?.value }} </b>
           </p>
         </div>
       </div>
