--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.css
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.css
@@ -5,10 +5,23 @@
   align-content: center;
 }
 
+
 .botao {
   margin: 5px;
   margin-top: 70px;
   width: 200px;
+  text-align: center;
+
+}
+
+.botao-cancelar{
+  background-color: darkgray;
+  border: 2px solid darkgray
+}
+
+.botao-cancelar:hover {
+  border: 2px solid #84EEC1;
+  color: #84EEC1;
 }
 
 .criar-pensamentos {
@@ -20,6 +33,7 @@
 
   border: none;
   border-radius: 20px;
+
 
   display: flex;
   flex-direction: column;
@@ -140,4 +154,11 @@ input[type='radio']:checked+.custom-radio span {
   color: red;
   margin-top: -25px;
   margin-bottom: 20px;
+}
+
+.botao__desabilitado{
+  margin: 5px;
+  margin-top: 70px;
+  width: 200px;
+  background-color: darkgray;
 }
