--- a/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -11,6 +11,14 @@
     </div>
   </div>
 </section>
+
+<app-boatao-carregar-mais
+ [haMaisPensamentos]="haMaisPensamentos"
+ (click)="carregarMaisPensamentos()"
+ >
+
+</app-boatao-carregar-mais>
+
 <ng-template #semPensamentos>
   <div class="ff-inter sem-pensamentos">
     <p>Ainda não há pensamentos cadastrados!</p>
