--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -8,7 +8,7 @@
     <input type="textarea" class="input" id="pensamento" formControlName="conteudo" placeholder="Digite o pensamento" />
 
     <div class="mensagem__erro"
-    *ngIf="formulario.get('conteudo')?.errors && formulario.get('autoria')?.touched">
+    *ngIf="formulario.get('conteudo')?.errors && formulario.get('conteudo')?.touched">
       Pensamento é obrigatório!
     </div>
 
