--- a/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.css
+++ b/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.css
@@ -1,3 +1,14 @@
+.botoes{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.botoes button{
+  margin-left: 10px;
+  margin-right: 2px;
+}
+
 .mural {
   display: flex;
   flex-wrap: wrap;
@@ -40,7 +51,6 @@
 
 .buscar-pensamentos img {
   padding-right: 15px;
-  width: 30px;
 }
 
 input::placeholder {
