--- a/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -7,10 +7,10 @@
       <img src="/assets/imagens/lupa.png" alt="lupa azul">
     </div>
 
-    <h2 class="ff-inter">Meu Mural</h2>
+    <h2 class="ff-inter"> {{ titulo }} </h2>
 
     <div class="botoes">
-      <button class="botao">Meu Mural</button>
+      <button class="botao" (click)="recarregarComponente()" >Meu Mural</button>
       <button class="botao" (click)="listarFavoritos()" >Favoritos</button>
       <button routerLink="/criarPensamento" class="botao">+ Novo Pensamento</button>
     </div>
@@ -18,7 +18,10 @@
   </header>
   <div class="mural" *ngIf="listaPensamentos.length > 0, else semPensamentos">
     <div *ngFor="let pensamento of listaPensamentos">
-      <app-pensamento [pensamento]="pensamento"></app-pensamento>
+      <app-pensamento
+       [pensamento]="pensamento"
+       [listaFavoritos]="listaFavoritos"
+      ></app-pensamento>
     </div>
   </div>
 </section>
